Preparacion de datos: Tratamiento de datos incorrectos

--- a/Solution/PabloPaez_ModelizacionPredictiva.ipynb
+++ b/Solution/PabloPaez_ModelizacionPredictiva.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,136 +139,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Name':                    n         %\n",
-      "Name                          \n",
-      "Mieres             2  0.000246\n",
-      "Cieza              2  0.000246\n",
-      "Moya               2  0.000246\n",
-      "Rebollar           2  0.000246\n",
-      "Villaescusa        2  0.000246\n",
-      "...               ..       ...\n",
-      "Muras              1  0.000123\n",
-      "Monterroso         1  0.000123\n",
-      "Monforte de Lemos  1  0.000123\n",
-      "Mondoñedo          1  0.000123\n",
-      "Zuñeda             1  0.000123\n",
-      "\n",
-      "[8100 rows x 2 columns], 'CCAA':                    n         %\n",
-      "CCAA                          \n",
-      "CastillaLeón    2248  0.276950\n",
-      "Cataluña         947  0.116669\n",
-      "CastillaMancha   919  0.113219\n",
-      "Andalucía        773  0.095232\n",
-      "Aragón           731  0.090058\n",
-      "ComValenciana    542  0.066773\n",
-      "Extremadura      387  0.047678\n",
-      "Galicia          314  0.038684\n",
-      "Navarra          272  0.033510\n",
-      "PaísVasco        251  0.030923\n",
-      "Madrid           179  0.022052\n",
-      "Rioja            174  0.021436\n",
-      "Cantabria        102  0.012566\n",
-      "Canarias          88  0.010841\n",
-      "Asturias          78  0.009609\n",
-      "Baleares          67  0.008254\n",
-      "Murcia            45  0.005544, 'AbstencionAlta':                    n         %\n",
-      "AbstencionAlta                \n",
-      "False           5591  0.688801\n",
-      "True            2526  0.311199, 'Izquierda':               n         %\n",
-      "Izquierda                \n",
-      "False      6308  0.777134\n",
-      "True       1809  0.222866, 'Derecha':             n         %\n",
-      "Derecha                \n",
-      "True     5041  0.621042\n",
-      "False    3076  0.378958, 'ActividadPpal':                         n         %\n",
-      "ActividadPpal                      \n",
-      "Otro                 4932  0.607614\n",
-      "ComercTTEHosteleria  2538  0.312677\n",
-      "Servicios             620  0.076383\n",
-      "Construccion           14  0.001725\n",
-      "Industria              13  0.001602, 'Densidad':              n         %\n",
-      "Densidad                \n",
-      "MuyBaja   6416  0.790440\n",
-      "Baja      1053  0.129728\n",
-      "Alta       556  0.068498\n",
-      "?           92  0.011334}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(analizar_variables_categoricas(datos))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Name                            0\n",
-       "CodigoProvincia                 0\n",
-       "CCAA                            0\n",
-       "Population                      0\n",
-       "TotalCensus                     0\n",
-       "AbstentionPtge                  0\n",
-       "AbstencionAlta                  0\n",
-       "Izda_Pct                        0\n",
-       "Dcha_Pct                        0\n",
-       "Otros_Pct                       0\n",
-       "Izquierda                       0\n",
-       "Derecha                         0\n",
-       "Age_0-4_Ptge                    0\n",
-       "Age_under19_Ptge                0\n",
-       "Age_19_65_pct                   0\n",
-       "Age_over65_pct                  0\n",
-       "WomanPopulationPtge             0\n",
-       "ForeignersPtge                  0\n",
-       "SameComAutonPtge                0\n",
-       "SameComAutonDiffProvPtge        0\n",
-       "DifComAutonPtge                 0\n",
-       "UnemployLess25_Ptge             0\n",
-       "Unemploy25_40_Ptge              0\n",
-       "UnemployMore40_Ptge             0\n",
-       "AgricultureUnemploymentPtge     0\n",
-       "IndustryUnemploymentPtge        0\n",
-       "ConstructionUnemploymentPtge    0\n",
-       "ServicesUnemploymentPtge        0\n",
-       "totalEmpresas                   0\n",
-       "Industria                       0\n",
-       "Construccion                    0\n",
-       "ComercTTEHosteleria             0\n",
-       "Servicios                       0\n",
-       "ActividadPpal                   0\n",
-       "inmuebles                       0\n",
-       "Pob2010                         0\n",
-       "SUPERFICIE                      8\n",
-       "Densidad                        0\n",
-       "PobChange_pct                   7\n",
-       "PersonasInmueble                0\n",
-       "Explotaciones                   0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(cuentaDistintos(datos))\n",
     "\n",
     "# print(datos.describe().T)\n",
     "\n",
     "datos[datos.columns].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Tratamiento de datos incorrectos </h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categoricas = [\"Densidad\", \"Population\", \"Name\", \"CCAA\"]\n",
+    "\n",
+    "for c in categoricas:\n",
+    "    datos[c] = datos[c].replace('nan',np.nan)\n",
+    "\n",
+    "datos[\"Densidad\"] = datos[\"Densidad\"].replace('?', np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "porcentajes = [\n",
+    "    \"WomanPopulationPtge\", \"ForeignersPtge\", \"SameComAutonPtge\", \"SameComAutonDiffProvPtge\", \"DifComAutonPtge\",\n",
+    "    \"UnemployLess25_Ptge\", \"Unemploy25_40_Ptge\", \"UnemployMore40_Ptge\", \"AgricultureUnemploymentPtge\", \"IndustryUnemploymentPtge\",\n",
+    "    \"ConstructionUnemploymentPtge\", \"ServicesUnemploymentPtge\", \"AbstentionPtge\", \"Izda_Pct\", \"Dcha_Pct\", \"Otros_Pct\", \"Age_0-4_Ptge\",\n",
+    "    \"Age_under19_Ptge\", \"Age_19_65_pct\", \"Age_over65_pct\",\"PobChange_pct\"]\n",
+    "\n",
+    "for c in porcentajes:\n",
+    "    datos[c] = [x if 0 <= x <= 100 else np.nan for x in datos[c]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "datos[\"ActividadPpal\"] = datos[\"ActividadPpal\"].replace([\"Otro\"], \"Otros\")\n"
    ]
   }
  ],
